--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@ migrate_working_dir/
 .pub/
 /build/
 formulários.docx
+/linux/
+/macos/
+/web/
+/windows/
 
 # Symbolication related
 app.*.symbols
