--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: 2.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -59,7 +60,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - path: assets/google-icon.png
+     - path: assets/
       
 
   # An image asset can refer to one or more resolution-specific "variants", see
