--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  http: ^1.5.0
+  firebase_core: ^4.0.0
+  google_sign_in: ^6.3.0
+  firebase_auth: ^6.0.1
+  cloud_firestore: ^6.0.0
+
 
 dev_dependencies:
   flutter_test:
