--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ migrate_working_dir/
 .pub/
 /build/
 
+
 # Symbolication related
 app.*.symbols
 
@@ -43,6 +44,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+/android/app/google-services.json
+/android/.kotlin
+/android/build/reports/problems
 
 formulários.docx
 
