--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_sign_in: ^6.3.0
   firebase_auth: ^6.0.1
   cloud_firestore: ^6.0.0
+  shared_preferences: ^2.5.3
 
 
 dev_dependencies:
